# Management_System

./: .gitignore  Makefile  mkdocs.yml  pyproject.toml
app/: api.py
tests/: test_api.py
