[tool.poetry]
name = "management_system"
version = "0.1.0"
description = ""
authors = ["Arthuralentejo <arthur.alentejo228@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.10"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
