[tool.poetry]
name = "management_system"
version = "0.1.0"
description = ""
authors = ["Arthuralentejo <arthur.alentejo228@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.10"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mkdocs = "^1.3.0"
blue = "^0.9.0"
isort = "^5.10.1"
prospector = "^1.7.7"
pip-audit = "^2.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
